----------------------------------------------------------------------
 OmegaT 3.1.1
----------------------------------------------------------------------
  11 Enhancements
   5 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
3.1.0 update 1 vs. 3.1.0

  Implemented requests:

  - Add Illustrator xml export format support to the SVG filter
  https://sourceforge.net/p/omegat/feature-requests/987/

  - Allow using <trans-unit> ID as identifier of alternative translations in XLIFF filter 
  https://sourceforge.net/p/omegat/feature-requests/989/

  - Mozilla .lang files filter
  https://sourceforge.net/p/omegat/feature-requests/962/

  - PO filter: allow translating blank source segments
  https://sourceforge.net/p/omegat/feature-requests/960/

  - Allow Moving up/down/first/last multiple files in Project Files list
  https://sourceforge.net/p/omegat/feature-requests/964/

  - In search, make space match non-breaking space
  https://sourceforge.net/p/omegat/feature-requests/969/

  - Enable sorting by column in the Spellchecker window (script)
  https://sourceforge.net/p/omegat/feature-requests/972/

  Other enhancements:

  - In replace mode, "Cancel" was replaced by "Finish", because
"Cancel" could lead to believe that changes already done would be
undone

  - By giving an email in -Dmymemory.api.email for MyMemory machine 
translation, it is possible to use 1000 requests per day instead 
of 100 ones

  - The Linux version is now available also with a 64-bit JRE

  - Bundle (.properties) filter now displays comments (# or !)
preceding a segment in the Comments pane

  Bug fixes:

  - When using a search or replace filter, the last change made before 
removing the filter or pressing Cancel could be lost

  - Alternative translation overwrites the default one in team project
  https://sourceforge.net/p/omegat/bugs/678/

  - "Properties..." menu is disabled in team projects 